--- a/orders/templates/orders/contract_template.html
+++ b/orders/templates/orders/contract_template.html
@@ -7,26 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>عقد رقم {{ order.order_number }}-{{ order.contract_number|default:"c1" }}</title>
     <style>
-        /* تحميل خط Noto Naskh Arabic */
+        /* تحميل خط Noto Naskh Arabic - محسّن (Regular و Bold فقط لتحسين الأداء) */
         @font-face {
             font-family: 'Noto Naskh Arabic';
             font-style: normal;
             font-weight: 400;
             src: url('file:///home/zakee/homeupdate/static/vendor/fonts/noto-naskh/NotoNaskhArabic-Regular.ttf') format('truetype');
-        }
-
-        @font-face {
-            font-family: 'Noto Naskh Arabic';
-            font-style: normal;
-            font-weight: 500;
-            src: url('file:///home/zakee/homeupdate/static/vendor/fonts/noto-naskh/NotoNaskhArabic-Medium.ttf') format('truetype');
-        }
-
-        @font-face {
-            font-family: 'Noto Naskh Arabic';
-            font-style: normal;
-            font-weight: 600;
-            src: url('file:///home/zakee/homeupdate/static/vendor/fonts/noto-naskh/NotoNaskhArabic-SemiBold.ttf') format('truetype');
         }
 
         @font-face {
